# Math

./: .gitignore  2.dart  Cargo.toml  Convoluter.py  ConvolutionCiclicalDiscrete.py  ConvolutionDiscrete.py  Overlap_and_Save.py  Readme.MD  Readme.html  Todo
.misc/convolutions/: Convoluter.py  ConvolutionCiclicalDiscrete.py  ConvolutionDiscrete.py  Overlap_and_Save.py
.misc/visualization/: graphs.py
.misc/visuals/: graphs.py  neural.py
src/: lib.rs  main.rs  matrix.rs
src/calculus/: cost_functions.rs  functions.rs  mod.rs
src/linear_algebra/: matrix.rs  methods.rs  mod.rs  trait_impls.rs
src/machine_learning/: dataset.rs  mod.rs
src/machine_learning/dataset/: mnist.rs  mod.rs
src/machine_learning/neural_network/: cost_functions.rs  methods.rs  mod.rs
src/utilities/: benchmarking.rs  macros.rs  mod.rs
