[package]
name = "mathematics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
nalgebra = { version = "0.32.3", features = ["rand", "serde-serialize"] }
num-traits = "0.2"
rand = "0.8.5"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0"