[package]
name = "mathematics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas = "0.4.0"
image = "0.24.7"
num-traits = "0.2"
openblas-src = {version = "0.10.8", features = ["system"]}
rand = "0.8.5"
